# homa

./: .gitignore  README.md  homa  pyproject.toml  requirements.in  requirements.txt
docker/: docker-compose.yml  dockerfile
src/diffusion/: README.md
src/diffusion/datasets/: base_dataset.py  colors.py  create_and_push_dataset.py  explore_dataset.ipynb  shapes.py  simulated_dataset.py
src/diffusion/evaluation/: eval_tool.py
src/diffusion/modules/: diffusion_model.py
src/diffusion/training/: trainer.py
