[project]
name = "homa"
version = "0.1.1"
description = "A repository to train specialized image generation algorithms"
authors = ["Armin"]
license = "MIT"
readme = "README.md"
requires-python = "==3.10.0"

[tool.uv]
dev-dependencies = [
    "mypy==1.11.2",
    "numpy==1.26.4",
    "pydantic==2.6.4",
    "pytest==8.3.3",
    "pytest-env==1.1.4",
    "pytest-mock==3.14.0",
    "ruff==0.6.3"
]

[tool.ruff]
target-version = "py310"
extend-exclude = [
    "__pycache__",
    "*.ipynb"
]

[tool.ruff.lint]
extend-select = ["I", "B"]
extend-ignore = ["E712"]

[tool.mypy]
packages = ["src"]
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]
